# rust-file

./: .gitignore  README.md
apikey/: Cargo.toml  output.txt
apikey/data/: data.txt  output.txt
apikey/src/: append_names.rs  main.rs  sum.rs
append/: Cargo.toml
append/src/: main.rs
array/: Cargo.toml
array/data/: moon_temp.txt  students_marks.txt
array/src/: arr.rs  main.rs  moon.rs
bufread/: Cargo.toml  input.txt  temperatures.txt
bufread/src/: line-by-line.rs  main.rs  names.rs  temp.rs
byte/: Cargo.toml
byte/data/: example.txt
byte/src/: main.rs  read10.rs  read_bytes.rs
csv/: Cargo.toml
csv/data/: city_data.csv  data.csv
csv/src/: city.rs  final.rs  high_price.rs  main.rs  occupations.rs  person.rs  read.rs  sorted.rs
json/: Cargo.toml
json/data/: combined_data.json  data.json  event.json  oneliner.json  products.json  students.json
json/src/: array.rs  array2.rs  event.rs  fields.rs  final.rs  ident.rs  last.rs  main.rs  rename-fld.rs  second.rs  struct.rs  students.rs  writing.rs
simple/: Cargo.toml
simple/data/: data.txt
simple/src/: main.rs
tabular/: Cargo.toml
tabular/data/: animal_data.txt  data.txt  devices.txt  output.csv  output.txt  temperatures.txt
tabular/src/: animal.rs  device.rs  header.rs  main.rs  matrix.rs  pet.rs  struct.rs  temperatures.rs  tocsv.rs  write.rs
zipfile/: Cargo.toml
zipfile/large_data/: data.csv
zipfile/src/: batch_write.rs  batch_write2.rs  batch_writex.rs  main.rs  max.rs  read.rs  test_exist.rs  type.rs
