[package]
name = "csv"
version = "0.1.0"
edition = "2024"

[[bin]]
name="sort"
path="src/sorted.rs"

[[bin]]
name="per"
path="src/person.rs"

[[bin]]
name="occ"
path="src/occupations.rs"

[[bin]]
name="city"
path="src/city.rs"

[[bin]]
name="hp"
path="src/high_price.rs"

[[bin]]
name="rd"
path="src/read.rs"

[[bin]]
name="fin"
path="src/final.rs"

[dependencies]
serde = { version = "=1.0", features = ["derive"] }
serde_json = "=1.0"
csv = "=1.3.1"

