[package]
name = "json"
version = "0.1.0"
edition = "2024"

[[bin]]
name="final"
path="src/final.rs"

[[bin]]
name="sec"
path="src/second.rs"

[[bin]]
name="fields"
path="src/fields.rs"

[[bin]]
name="stud"
path="src/students.rs"

[[bin]]
name="arr"
path="src/array.rs"

[[bin]]
name="ar2"
path="src/array2.rs"

[[bin]]
name="str"
path="src/struct.rs"

[[bin]]
name="evt"
path="src/event.rs"

[dependencies]
serde = { version = "=1.0", features = ["derive"] }
serde_json = "=1.0"
csv = "=1.3.1"

