[package]
name = "tabular"
version = "0.1.0"
edition = "2024"

[[bin]]
name="struct"
path="src/struct.rs"

[[bin]]
name="header"
path="src/header.rs"

[[bin]]
name="animal"
path="src/animal.rs"

[[bin]]
name="dvc"
path="src/device.rs"

[[bin]]
name="out"
path="src/write.rs"

[[bin]]
name="2csv"
path="src/tocsv.rs"

[dependencies]
csv = "1.3.1"
