[package]
name = "zipfile"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "type"
path = "src/type.rs"

[[bin]]
name = "max"
path = "src/max.rs"

[[bin]]
name = "rd"
path = "src/read.rs"

[[bin]]
name = "te"
path = "src/test_exist.rs"

[[bin]]
name = "bw"
path = "src/batch_write.rs"

[[bin]]
name = "bw2"
path = "src/batch_write2.rs"

[[bin]]
name = "bwx"
path = "src/batch_writex.rs"

[dependencies]
rand = "=0.8.5"
zip = "5.1.1"


